--- a/apps/backend/views/setup/install.phtml
+++ b/apps/backend/views/setup/install.phtml
@@ -1,3 +1,4 @@
+<!-- @todo: adicionar o campo repetir senha e efetuar a verificação de senha via jQuery;-->
 <header class="container">
     <div class="content">
         <h1 class="main_logo text-center">
