dev inserção de usuários

--- a/apps/backend/views/settings/graphics.phtml
+++ b/apps/backend/views/settings/graphics.phtml
@@ -1,5 +1,5 @@
 <div class="panel-heading">
-    <i class="fa fa-bar-chart-o fa-fw"></i> Acessos
+    Acessos
     <div class="pull-right">
         <div class="btn-group">
             <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
@@ -62,5 +62,5 @@
                 responsive: true
             });
         }
-    
+
 </script>
