desenvolvimento edição de usuários

--- a/apps/backend/views/settings/listUsers.phtml
+++ b/apps/backend/views/settings/listUsers.phtml
@@ -25,7 +25,7 @@
                 <td><?= $user->user_name ?></td>
                 <td><?= $user->user_login ?></td>
                 <td><?= $user->user_email ?></td>
-                <td><?= "nivel de permissão" ?></td>
+                <td><?= $user->UserType->user_type_descr ?></td>
                 </a>
                 <?php } ?>
             </tbody>
